# companion-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/companion_mcp/: __main__.py  client.py  config.py  server.py  ui.py
src/companion_mcp/ui_static/: app.js  index.html  styles.css
tests/: test_client.py  test_config.py  test_server.py  test_ui.py
